--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>politifact</title>
     <link href="assets/css/main.css" rel="stylesheet">
+    <link rel="icon" type="image/jpg" sizes="60x32" href="assets/images/p logo.jpg">
+
 
 
 <body>
@@ -67,7 +69,7 @@
                     <ul>
 
                         <li><a href="index.html">முகப்பு</a></li>
-                        <li><a href="pages/portfolio/potfolio.html">விவரம்</a></li>
+                        <li><a href="pages/portfolio/parties-profile.html">விவரம்</a></li>
                         <li>
                             <div class="dropdown">
                                 <ul>
@@ -146,7 +148,7 @@
             </div>
 
             <div class="sideimage">
-                <img src="assets/images/backround.jpg" alt="error image">
+                <img src="assets/images/motivation.jpg" alt="error image">
             </div>
 
         </div>
@@ -164,7 +166,8 @@
 
             <h1><span>ஒரு தன்னார்வலராக</span> மாறுங்கள்</h1>
 
-            <h2>நீங்கள் அரசியலில் ஆர்வம் காட்டவில்லை என்பதற்காக<br> நீங்கள் அரசாங்கத்தை மாற்ற விரும்புகிறீர்கள் என்று அர்த்தமல்ல.
+            <h2>நீங்கள் அரசியலில் ஆர்வம் காட்டவில்லை என்பதற்காக<br> நீங்கள் அரசாங்கத்தை மாற்ற விரும்புகிறீர்கள் என்று
+                அர்த்தமல்ல.
             </h2>
             <button><a href="pages/your opinion/join now.html">இப்போது சேரவும்</a></button>
         </div>
@@ -211,22 +214,22 @@
         <div class="news">
 
             <div class="news1">
-                <img src="assets/images/backround.jpg" alt="error image">
+                <img src="assets/images/news3.jpg" alt="error image">
                 <h2>politics</h2>
-                <p>mlmf;ldk;lfk;dkfjfnkvnfnv;lknf;lkvmoifm</p>
+                <p>
+                    சினிமாவில் காவி நிறம் அணியக் கூடாது என்றால், கறுப்பு ஆடைகள் அணிந்து வில்லனாக நடிப்பதால் திராவிடர் கழகத்தினர் எல்லாம் வில்லன்களா? என மதிமுக தலைமை நிலைய செயலாளர் துரை வைகோ கேள்வி எழுப்பியுள்ளார். வாரிசு அரசியல் பற்றிப் பேச பாஜக மாநிலத் தலைவர் அண்ணாமலைக்கு தகுதியே இல்லை, அவரது கட்சியிலேயே பலரது வாரிசுகள் பொறுப்புகளில் இருக்கிறார்கள் என துரை வைகோ தெரிவித்துள்ளார்.</p>
             </div>
 
             <div class="news1">
-                <img src="assets/images/backround.jpg" alt="error image">
+                <img src="assets/images/news2.jpg" alt="error image">
                 <h2>politics</h2>
-                <p>lkf;mflknlkjnflkvnfkblkmnblkjfn<br>l;kmglfdml;mflkm,fvm,fm;lvkmdf;km;lfkvm;lf
-                </p>
+                <p>தமிழ்நாடு அமைச்சரவையில் பெரும் எதிர்பார்ப்பிற்கு இடையில் பல்வேறு மாற்றங்கள் செய்யப்பட்டு உள்ளன. முதல்வர் ஸ்டாலினின் ஒரு இலாக்காவையும் சேர்த்து மொத்தமாக 11 அமைச்சர்களின் இலாக்காக்கள் மாற்றப்பட்டு உள்ளன. உதயநிதி ஸ்டாலினுக்கு இளைஞர் நலன், விளையாட்டுத்துறை வழங்கப்பட்டு உள்ளது. அதேபோல் சிறப்பு திட்ட செயலாக்கம் துறை வழங்கப்பட்டு உள்ளது.</p>
             </div>
 
             <div class="news1">
-                <img src="assets/images/backround.jpg" alt="error image">
+                <img src="assets/images/news1.jpg" alt="error image">
                 <h2>politics</h2>
-                <p>mflfdklkdf;lvmdfjmclkdmfnpoj</p>
+                <p>சென்னை: கட்சித் தலைமை ஒரு குடும்பத்திடம் மட்டும் தொடர்வதுதான் வாரிசு அரசியல், பாஜகவில் இருப்பது வாரிசு அரசியல் அல்ல.. முதல்வர் ஸ்டாலின் பட்டியலினத்தை சேர்ந்தவரை துணை முதலமைச்சராக்க வேண்டும். என்று பாஜக எம்எல்ஏ வானதி சீனிவாசன் தெரிவித்துள்ளார்.</p>
             </div>
 
         </div>
@@ -241,8 +244,9 @@
             <h1>politic</h1>
             <p>
 
-                
-வலி மிகவும் முக்கியமானது, நோயாளியின் வலிப்புத்தாக்கத்தின் விளைவு, ஆனால் அது உழைப்பு மற்றும் வலியை ஏற்படுத்தும் ஒரு நேரத்தில் அதைச் செய்யட்டும்.
+
+                வலி மிகவும் முக்கியமானது, நோயாளியின் வலிப்புத்தாக்கத்தின் விளைவு, ஆனால் அது உழைப்பு மற்றும் வலியை
+                ஏற்படுத்தும் ஒரு நேரத்தில் அதைச் செய்யட்டும்.
             </p>
             <img src="assets/images/icon-facebook.svg" alt="error image">
             <img src="assets/images/icon-instagram.svg" alt="error image">
@@ -261,7 +265,7 @@
         </div>
 
         <div class="foot1">
-            <p>முக்கியமான தகவல்</p>
+            <h1>முக்கியமான தகவல்</h1>
             <p>
                 விரைவான தொடர்பு</p>
             <p>
@@ -270,7 +274,7 @@
         </div>
 
         <div class="foot1">
-            <h1>instagram </h1>இந்தப் பக்கத்திற்குக் கிடைக்கவில்லை
+            <h1>instagram </h1>
             <p>இந்தப் பக்கத்திற்குக் கிடைக்கவில்லை</p>
         </div>
 
