--- a/pages/home/homepage-english.html
+++ b/pages/home/homepage-english.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>politifact</title>
     <link href="../../assets/css/english-version.css" rel="stylesheet">
-
+    <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/p logo.jpg">
 
 <body>
 
@@ -76,7 +76,7 @@
                                 <div class="dropdown-content">
                                     <!-- drop dpwn menu -->
 
-                                    <a href="../manifesto/bending-english.html">Bending</a>
+                                    <a href="../manifesto/bending-english.html">Pending</a>
                                     <a href="../manifesto/complte-english.html">completed</a>
                                 </div>
                             </div>
@@ -131,7 +131,7 @@
 
         <h1>welcome to politifact</h1>
 
-        <img src="assets/images/Capture.PNG" alt="">
+        <img src="../../assets/images/Capture.PNG" alt="">
 
         <div class="box">
 
@@ -148,7 +148,7 @@
             </div>
 
             <div class="sideimage">
-                <img src="assets/images/backround.jpg" alt="error image">
+                <img src="../../assets/images/motivation.jpg" alt="error image">
             </div>
 
         </div>
@@ -214,22 +214,23 @@
         <div class="news">
 
             <div class="news1">
-                <img src="assets/images/backround.jpg" alt="error image">
+                <img src="../../assets/images/news3.jpg" alt="error image">
                 <h2>politics</h2>
-                <p>mlmf;ldk;lfk;dkfjfnkvnfnv;lknf;lkvmoifm</p>
+                <p>If saffron should not be worn in cinema, are all Dravidians villains because they play villains in black clothes? Durai Vaiko, secretary of the MDMK head office, has questioned. Durai Vaiko has said that BJP state president Annamalai is not qualified to talk about succession politics, his party has many successors in responsibilities.</p>
             </div>
 
             <div class="news1">
-                <img src="assets/images/backround.jpg" alt="error image">
+                <img src="../../assets/images/news2.jpg" alt="error image">
                 <h2>politics</h2>
-                <p>lkf;mflknlkjnflkvnfkblkmnblkjfn<br>l;kmglfdml;mflkm,fvm,fm;lvkmdf;km;lfkvm;lf
+                <p>Various changes have been made in the Tamil Nadu cabinet amid much anticipation. A total of 11 ministers' portfolios have been changed, including Chief Minister Stalin's portfolio. Udayanidhi Stalin has been given Youth Welfare, Sports Department. A special project implementation department is also provided
                 </p>
             </div>
 
             <div class="news1">
-                <img src="assets/images/backround.jpg" alt="error image">
+                <img src="../../assets/images/news1.jpg" alt="error image">
                 <h2>politics</h2>
-                <p>mflfdklkdf;lvmdfjmclkdmfnpoj</p>
+                <p>
+                    CHENNAI: Succession politics is the continuation of party leadership in one family, being in BJP is not succession politics. BJP MLA Vanathi Srinivasan said.</p>
             </div>
 
         </div>
@@ -247,10 +248,10 @@
                 There are many variations of passages of Lorem Ipsum available,
                 but the.There are many variations of passages
             </p>
-            <img src="assets/images/icon-facebook.svg" alt="error image">
-            <img src="assets/images/icon-instagram.svg" alt="error image">
-            <img src="assets/images/icon-pinterest.svg" alt="error image">
-            <img src="assets/images/icon-twitter.svg" alt="error image">
+            <img src="../../assets/images/icon-facebook.svg" alt="error image">
+            <img src="../../assets/images/icon-instagram.svg" alt="error image">
+            <img src="../assets/images/icon-pinterest.svg" alt="error image">
+            <img src="../assets/images/icon-twitter.svg" alt="error image">
 
         </div>
 
