--- a/pages/manifesto/complte-english.html
+++ b/pages/manifesto/complte-english.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>manifesto</title>
     <link rel="stylesheet" href="../../assets/css/english-version.css">
+    <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/p logo.jpg">
 </head>
 
 <body>
@@ -107,7 +108,7 @@
     <!-- start main page -->
 
     <div class="manisurvey">
-        <img src="../../assets/images/Manifesto completed survey.jpeg" width="768px" height="500px" alt="error image">
+        <img src="../../assets/images/Manifesto completed survey.jpeg" alt="error image">
     </div>
     <div class="complete">
         <div class="kali">
