--- a/pages/more/Governer list-english.html
+++ b/pages/more/Governer list-english.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>governer-list</title>
     <link rel="stylesheet" href="../../assets/css/english-version.css">
+    <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/p logo.jpg">
 </head>
 
 <body>
@@ -75,7 +76,7 @@
                                 </ul>
 
                                 <div class="dropdown-content">
-                                    <a href="../manifesto/bending-english.html">Bending</a>
+                                    <a href="../manifesto/bending-english.html">Pending</a>
                                     <a href="../manifesto/complte-english.html">completed</a>
                                 </div>
 
