--- a/pages/more/mla.html
+++ b/pages/more/mla.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>mla-list</title>
     <link rel="stylesheet" href="../../assets/css/main.css">
+    <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/p logo.jpg">
 </head>
 
 <body>
@@ -66,7 +67,7 @@
                     <ul>
 
                         <li><a href="../../index.html">முகப்பு</a></li>
-                        <li><a href="../../pages/portfolio/potfolio.html">விவரம்</a></li>
+                        <li><a href="../../pages/portfolio/parties-profile.html">விவரம்</a></li>
 
                         <li>
                             <div class="dropdown">
@@ -115,14 +116,15 @@
 
     <!-- mla page -->
 
-    <div class="election-guru-tabcontent1">
-        <div class="candidates-details">
-            <p>தமிழ்நாடு சட்டசபையில் 234 தொகுதிகள் உள்ளன. கடைசியாக தமிழ்நாடு சட்டசபைக்கு எம்எல்ஏக்கள் தேர்வு
-                செய்யப்பட்டது மே 2021. திமுக வென்ற தொகுதிகள் 125, அதிமுக வென்ற தொகுதிகள் 65 இடங்கள், மற்றவர்கள் வென்றது
-                44 தொகுதிகள். தமிழ்நாடு சட்டசபைத் தேர்தலில் ஒவ்வொரு கட்சியிலிருந்தும் வென்றவர்களின் விரிவான பட்டியல்.
-            </p>
-        </div>
+
+    <div class="mla-list-intro">
+        <p><strong>பிரதிநிதிகள்:</strong></p>
+        <p>தமிழ்நாடு சட்டசபையில் 234 தொகுதிகள் உள்ளன. கடைசியாக தமிழ்நாடு சட்டசபைக்கு எம்எல்ஏக்கள் தேர்வு
+            செய்யப்பட்டது மே 2021. திமுக வென்ற தொகுதிகள் 125, அதிமுக வென்ற தொகுதிகள் 65 இடங்கள், மற்றவர்கள் வென்றது
+            44 தொகுதிகள். தமிழ்நாடு சட்டசபைத் தேர்தலில் ஒவ்வொரு கட்சியிலிருந்தும் வென்றவர்களின் விரிவான பட்டியல்.
+        </p>
     </div>
+
     <div class="governer">
         <table>
 
@@ -142,7 +144,7 @@
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td><a href="" target="_blank" title="கும்மிடிப்பூண்டி">கும்மிடிப்பூண்டி</a></td>
+                    <td><a href="daitails of mla/details of mla -english.html" target="_blank" title="கும்மிடிப்பூண்டி">கும்மிடிப்பூண்டி</a></td>
                     <td>டி ஜெ கோவிந்தராசன்</td>
                     <td>
                         <div class="name-img">
@@ -3473,42 +3475,46 @@
 
         </table>
     </div>
-    <!-- footer -->
-
+    <!-- footer  section-->
     <div class="footer">
 
         <div class="foot">
+
             <h1>politic</h1>
             <p>
 
-                There are many variations of passages of Lorem Ipsum available,
-                but the.There are many variations of passages
+
+                வலி மிகவும் முக்கியமானது, நோயாளியின் வலிப்புத்தாக்கத்தின் விளைவு, ஆனால் அது உழைப்பு மற்றும் வலியை
+                ஏற்படுத்தும் ஒரு நேரத்தில் அதைச் செய்யட்டும்.
             </p>
-            <img src="../../assets/images/icon-facebook.svg" alt="">
-            <img src="../../assets/images/icon-instagram.svg" alt="">
-            <img src="../../assets/images/icon-pinterest.svg" alt="">
-            <img src="../../assets/images/icon-twitter.svg" alt="">
+            <img src="../../assets/images/icon-facebook.svg" alt="error image">
+            <img src="../../assets/images/icon-instagram.svg" alt="error image">
+            <img src="../../assets/images/icon-pinterest.svg" alt="error image">
+            <img src="../../assets/images/icon-twitter.svg" alt="error image">
+
         </div>
 
         <div class="foot1">
-            <h1>IMPORTANT INFO</h1>
-            <p>About Us</p>
-            <p>Annual Reports</p>
-            <p>Our Approch</p>
-            <p>Statistics</p>
+            <h1>முக்கியமான தகவல்</h1>
+            <p>
+                எங்களை பற்றி</p>
+            <p>ஆண்டு அறிக்கைs</p>
+            <p>எங்கள் அணுகுமுறை</p>
+            <p>புள்ளிவிவரங்கள்</p>
         </div>
 
         <div class="foot1">
-            <p>IMPORTANT INFO</p>
-            <p>Donet</p>
-            <p>Quick contact</p>
-            <p>Volunteer form</p>
-            <p>bloger</p>
+            <h1>முக்கியமான தகவல்</h1>
+            <p>
+                விரைவான தொடர்பு</p>
+            <p>
+                தன்னார்வ படிவம்</p>
+            <p>பதிவர்</p>
         </div>
 
         <div class="foot1">
             <h1>instagram </h1>
-            <p>not available for this page</p>
+            <p>இந்தப் பக்கத்திற்குக் கிடைக்கவில்லை</p>
         </div>
 
     </div>
