--- a/pages/passt leaders/past leaders-english-english.html
+++ b/pages/passt leaders/past leaders-english-english.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>past leaders</title>
     <link rel="stylesheet" href="../../assets/css/english-version.css">
+    <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/p logo.jpg">
+
 </head>
 
 <body>
@@ -66,7 +68,7 @@
                                     <li><a class="dropbtn" href="">manifesto</a></li>
                                 </ul>
                                 <div class="dropdown-content">
-                                    <a href="../manifesto/bending-english.html">Bending</a>
+                                    <a href="../manifesto/bending-english.html">Pending</a>
                                     <a href="../manifesto/complte-english.html">completed</a>
                                 </div>
                             </div>
