--- a/pages/portfolio/potfolio-english.html
+++ b/pages/portfolio/potfolio-english.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>politifact</title>
   <link href="../../assets/css/english-version.css" rel="stylesheet">
+  <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/p logo.jpg">
+
 
 
 <body>
@@ -69,7 +71,7 @@
 
                   <!-- drop dpwn menu -->
 
-                  <a href="../manifesto/bending-english.html">Bending</a>
+                  <a href="../manifesto/bending-english.html">Pending</a>
                   <a href="../manifesto/complte-english.html">completed</a>
                 </div>
 
@@ -109,7 +111,7 @@
     <div class="list1">
       <img src="../../assets/images/mk stalin.png" alt="error image">
       <h3>name: m.k. stalin</h3>
-      <button><a href="../portfolio/profile/profile.html">view profile</a></button>
+      <button><a href="../portfolio/profile/profile-english.html">view profile</a></button>
     </div>
 
   </div>
