--- a/pages/portfolio/potfolio.html
+++ b/pages/portfolio/potfolio.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>politifact</title>
   <link href="../../assets/css/main.css" rel="stylesheet">
+  <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/p logo.jpg">
+
 
 
 <body>
@@ -58,7 +60,7 @@
           <ul>
 
             <li><a href="../../index.html">முகப்பு</a></li>
-            <li><a href="../../pages/portfolio/potfolio.html">விவரம்</a></li>
+            <li><a href="../../pages/portfolio/parties-profile.html">விவரம்</a></li>
 
             <li>
               <div class="dropdown">
@@ -119,227 +121,242 @@
   </div>
 
   <div class="lists1">
+
+    <div class="list2">
+      <img src="../../assets/images/udhayanithi.jpg" alt="error image">
+      <p>பெயர்: உதயநிதி ஸ்டாலின்</p>
+      <p>NAME: Udhayanidhi Stalin
+      </p>
+      <p> பதவி: விளையாட்டு </p>
+      <button><a href="../portfolio/profile/uhtayanithiprofile.html">view profile</a></button>
+    </div>
+
     <div class="list2">
       <img src="../../assets/images/duraimurugan.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
-      <button><a href="">view profile</a></button>
+      <p>பெயர் : துரைமுருகன்</p>
+      <p>NAME: Durai Murugan</p>
+      <p> பதவி: பொதுச்செயலாளர்</p>
+      <button><a href="../portfolio/profile/duraimurugan.html">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/kn neru.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
-      <button><a href="">view profile</a></button>
+      <p>பெயர் : கே. என். நேரு</p>
+      <p>NAME: K. N. Nehru</p>
+      <p> பதவி: நகர்ப்புற வளர்ச்சித்துறை</p>
+      <button><a href="../portfolio/profile/k n neru.html">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/periyasami.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
-      <button><a href="">view profile</a></button>
+      <p>பெயர் : ஐ. பெரியசாமி</p>
+      <p>NAME: I. Periyasamy</p>
+      <p> பதவி: கூட்டுறவுத்</p>
+      <button><a href="../portfolio/profile/periyasami.html">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/ponkmudi.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
-      <button><a href="">view profile</a></button>
+      <p>பெயர் : க. பொன்முடி</p>
+      <p>NAME: K. Ponmudy</p>
+      <p> பதவி: உயர் கல்வி</p>
+      <button><a href="../portfolio/profile/ponmudi.html">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/velu.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
-      <button><a href="">view profile</a></button>
+      <p>பெயர் : எ. வ. வேலு</p>
+      <p>NAME: E. V. Velu</p>
+      <p> பதவி: உணவுத் துறை</p>
+      <button><a href="../portfolio/profile/e v velu.html">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/pannerselvam.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
-      <button><a href="">view profile</a></button>
+      <p>பெயர் :ஆர். கே. பன்னீர்செல்வம்</p>
+      <p>NAME: M. R. K. Panneerselvam</p>
+      <p> பதவி: சமூக நலத்துறை</p>
+      <button><a href="#">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/ranachanran.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
-      <button><a href="">view profile</a></button>
+      <p>பெயர் :ஆர்.ராமச்சந்திரன்</p>
+      <p>NAME: Ramachandran</p>
+      <p> பதவி: தமிழக வருவாய் துறை</p>
+      <button><a href="#">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/tanarasu.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
-      <button><a href="">view profile</a></button>
+      <p>பெயர் : தங்கம் தென்னரசு</p>
+      <p>NAME: Thangam Thennarasu</p>
+      <p> பதவி: தொல்லியல்துறை</p>
+      <button><a href="#">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/regubathy.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
-      <button><a href="">view profile</a></button>
+      <p>பெயர் :
+        எஸ். ரகுபதி</p>
+      <p>NAME: S. REGUPATHY</p>
+      <p> பதவி: சட்டத்துறை</p>
+      <button><a href="#">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/muthusamy.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் :
+        சு. முத்துசாமி</p>
+      <p>NAME: S. Muthusamy</p>
+      <p> பதவி: வீட்டு வசதித்துறை</p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/periyakaruppan.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் : கே. ஆர். பெரியகருப்பன்</p>
+      <p>NAME: K.R.Periyakaruppan</p>
+      <p> பதவி: ஊரகவளர்ச்சி</p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/anbarasan.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் : தா. மோ. அன்பரசன்</p>
+      <p>NAME: T. M. Anbarasan</p>
+      <p> பதவி: ஊரக தொழிற்துறை</p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/saminathan.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் :
+        மு. பெ. சாமிநாதன்</p>
+      <p>NAME: M. P. Saminathan</p>
+      <p> பதவி: செய்தித்துறை</p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/geeth.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் : பெ. கீதா ஜீவன்</p>
+      <p>NAME: Geetha Jeevan</p>
+      <p> பதவி: மகளிர் உரிமைத்துறை </p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/anith.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் :
+        அனிதா ராதாகிருஷ்ணன்</p>
+      <p>NAME: Anitha R. Radhakrishnan</p>
+      <p> பதவி: கால்நடை பராமரிப்பு</p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/sivakumar.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் : S .சிவகுமார் </p>
+      <p>NAME: S S. Sivakumar</p>
+      <p> பதவி: போக்குவரத்து</p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/ramachandran.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் : K.இராமச்சந்திரன்</p>
+      <p>NAME: K. Ramachandran</p>
+      <p> பதவி: வனவிலங்கு</p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/sakkaraporni.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் : அர. சக்கரபாணி</p>
+      <p>NAME: R. Sakkarapani</p>
+      <p> பதவி: உணவு </p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/sendil balji.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் : வே. செந்தில்பாலாஜி</p>
+      <p>NAME: V. Senthilbalaji</p>
+      <p> பதவி: மின்சாரம்</p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/rs ganthi.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் : ஆர். காந்தி</p>
+      <p>NAME: (R. Gandhi</p>
+      <p> பதவி: கைத்தறி</p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/subramani.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் : மா. சுப்பிரமணியம்</p>
+      <p>NAME: M. Subramaniam</p>
+      <p> பதவி: மக்கள் நல்வாழ்வு</p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/mirthi.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் : பி. மூர்த்தி</p>
+      <p>NAME: Moorthy P</p>
+      <p> பதவி: வணிகவரி</p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/rajakannapan.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் : இராஜ கண்ணப்பன்</p>
+      <p>NAME: R. S. Raja Kannappan</p>
+      <p> பதவி: பிற்படுத்தப்பட்டோர்</p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/segar babu.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் : பி. கே. சேகர் பாபு</p>
+      <p>NAME: P. K. Sekar Babu</p>
+      <p> பதவி: அறநிலையத் துறை</p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/palanivel.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் : பழனிவேல் தியாகராஜன்</p>
+      <p>NAME: Palanivel Thiagarajan</p>
+      <p> பதவி: நிதித்துறை அமைச்சர்</p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/nasar.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் : சா. மு. நாசர்</p>
+      <p>NAME: S. M. Nasar</p>
+      <p> பதவி: பால் பண்ணை வளர்ச்சி</p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/magesh.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் :
+        அன்பில் மகேஷ்</p>
+      <p>NAME: Anbil Mahesh Poyyamozhi</p>
+      <p> பதவி: பள்ளிக் கல்வித் துறை</p>
       <button><a href="">view profile</a></button>
     </div>
 
     <div class="list2">
       <img src="../../assets/images/mano.jpg" alt="error image">
-      <p>பெயர் : </p>
-      <p>NAME: </p>
-      <p> பதவி: </p>
+      <p>பெயர் : மனோ தங்கராஜ்</p>
+      <p>NAME: T. Mano Thangaraj</p>
+      <p> பதவி: தொழில்நுட்பத்துறை</p>
       <button><a href="">view profile</a></button>
     </div>
 
@@ -358,43 +375,46 @@
     <input type="text" placeholder="Enter mail"><br>
     <button><a href="">subscribe now</a></button>
   </div>
-
-  <!-- footer -->
-
+  <!-- footer  section-->
   <div class="footer">
 
     <div class="foot">
+
       <h1>politic</h1>
       <p>
 
-        There are many variations of passages of Lorem Ipsum available,
-        but the.There are many variations of passages
+
+        வலி மிகவும் முக்கியமானது, நோயாளியின் வலிப்புத்தாக்கத்தின் விளைவு, ஆனால் அது உழைப்பு மற்றும் வலியை ஏற்படுத்தும்
+        ஒரு நேரத்தில் அதைச் செய்யட்டும்.
       </p>
       <img src="../../assets/images/icon-facebook.svg" alt="error image">
       <img src="../../assets/images/icon-instagram.svg" alt="error image">
       <img src="../../assets/images/icon-pinterest.svg" alt="error image">
-      <img src="../../assets/images/icon-twitter.svg" alt="ERROR image">
+      <img src="../../assets/images/icon-twitter.svg" alt="error image">
+
     </div>
 
     <div class="foot1">
-      <h1>IMPORTANT INFO</h1>
-      <p>About Us</p>
-      <p>Annual Reports</p>
-      <p>Our Approch</p>
-      <p>Statistics</p>
+      <h1>முக்கியமான தகவல்</h1>
+      <p>
+        எங்களை பற்றி</p>
+      <p>ஆண்டு அறிக்கைs</p>
+      <p>எங்கள் அணுகுமுறை</p>
+      <p>புள்ளிவிவரங்கள்</p>
     </div>
 
     <div class="foot1">
-      <p>IMPORTANT INFO</p>
-      <p>Donet</p>
-      <p>Quick contact</p>
-      <p>Volunteer form</p>
-      <p>bloger</p>
+      <h1>முக்கியமான தகவல்</h1>
+      <p>
+        விரைவான தொடர்பு</p>
+      <p>
+        தன்னார்வ படிவம்</p>
+      <p>பதிவர்</p>
     </div>
 
     <div class="foot1">
       <h1>instagram </h1>
-      <p>not available for this page</p>
+      <p>இந்தப் பக்கத்திற்குக் கிடைக்கவில்லை</p>
     </div>
 
   </div>
