--- a/pages/portfolio/profile/k n neru.html
+++ b/pages/portfolio/profile/k n neru.html
@@ -35,9 +35,9 @@
                 <p><a href="">தொடர்பு</a></p>
                 <p>|</p>
                 <p><a href="">பின்னூட்டம்</a></p>
-                <p><a href="profile-english.html">English</a></p>
+                <p><a href="k n neru.html">English</a></p>
                 <p>|</p>
-                <p><a href="profile.html">தமிழ்</a></p>
+                <p><a href="k n neru.html">தமிழ்</a></p>
             </div>
 
         </div>
@@ -106,21 +106,23 @@
 
         <!-- cm image put on header -->
 
-        <div class="cm-image">
-            <img src="../../../assets/images/mk stalin.png" alt="error image">
-        </div>
+       
 
 
         <div class="cm-name">
 
 
-            <p><strong> பதவி:</strong>முதலமைச்சர்</p>
-            <p><strong>பெயர்:</strong>மு. க. ஸ்டாலின்</p>
-            <p><strong>NAME:</strong>M. K. Stalin</p>
+            <p><strong> பதவி:</strong>நகர்ப்புற வளர்ச்சித்துறை</p>
+            <p><strong>பெயர்:</strong>கே. என். நேரு</p>
+            <p><strong>NAME:</strong>K. N. Nehru</p>
             <p><strong>PARTY:</strong>திராவிட முன்னேற்றக் கழகம்</p>
-            <p><strong>அரசியல்:</strong>38 வருடம்</p>
-             <p><strong>தொழில்</strong>சமூகசேவை, அரசியல்</p>
+            <p><strong>அரசியல்:</strong>32 வருடம்</p>
+             <p><strong>தொழில்</strong>அரசியல்</p>
 
+        </div>
+
+        <div class="cm-image">
+            <img src="../../../assets/images/kn neru.jpg" alt="error image">
         </div>
 
     </div>
@@ -139,7 +141,7 @@
     
                 <li><a href="#birth">பிறப்பு</a></li>
                 <li><a href="#educatiion">கல்வி</a></li>
-                <li><a href="#movie">திரைப்படம்</a></li>
+                <li><a href="#movie"></a>அரசியல்</li>
                 <li><a href="#politics">அரசியல்</a></li>
                 <li><a href="#family">குடும்பம்</a></li>
                 <li><a href="#income">வருமானம்</a></li>
@@ -280,7 +282,7 @@
         </div>
 
         <div class="foot1">
-            <p>முக்கியமான தகவல்</p>
+            <h1>முக்கியமான தகவல்</h1>
             <p>
                 விரைவான தொடர்பு</p>
             <p>
