--- a/pages/portfolio/profile/periyasami.html
+++ b/pages/portfolio/profile/periyasami.html
@@ -35,9 +35,9 @@
                 <p><a href="">தொடர்பு</a></p>
                 <p>|</p>
                 <p><a href="">பின்னூட்டம்</a></p>
-                <p><a href="profile-english.html">English</a></p>
+                <p><a href="periyasami.html">English</a></p>
                 <p>|</p>
-                <p><a href="profile.html">தமிழ்</a></p>
+                <p><a href="periyasami.html">தமிழ்</a></p>
             </div>
 
         </div>
@@ -107,21 +107,23 @@
         <!-- cm image put on header -->
 
         <div class="cm-image">
-            <img src="../../../assets/images/mk stalin.png" alt="error image">
+            <img src="../../../assets/images/periyasami.jpg" alt="error image">
         </div>
 
 
         <div class="cm-name">
 
 
-            <p><strong> பதவி:</strong>முதலமைச்சர்</p>
-            <p><strong>பெயர்:</strong>மு. க. ஸ்டாலின்</p>
-            <p><strong>NAME:</strong>M. K. Stalin</p>
+            <p><strong> பதவி:</strong>கூட்டுறவுத்</p>
+            <p><strong>பெயர்:</strong>ஐ. பெரியசாமி</p>
+            <p><strong>NAME:</strong>I. Periyasamy</p>
             <p><strong>PARTY:</strong>திராவிட முன்னேற்றக் கழகம்</p>
-            <p><strong>அரசியல்:</strong>38 வருடம்</p>
-             <p><strong>தொழில்</strong>சமூகசேவை, அரசியல்</p>
+            <p><strong>அரசியல்:</strong>36 வருடம்</p>
+             <p><strong>தொழில்</strong>அரசியல்</p>
 
         </div>
+
+       
 
     </div>
 
@@ -139,7 +141,7 @@
     
                 <li><a href="#birth">பிறப்பு</a></li>
                 <li><a href="#educatiion">கல்வி</a></li>
-                <li><a href="#movie">திரைப்படம்</a></li>
+                <li><a href="#movie"></a>அரசியல்</li>
                 <li><a href="#politics">அரசியல்</a></li>
                 <li><a href="#family">குடும்பம்</a></li>
                 <li><a href="#income">வருமானம்</a></li>
