--- a/pages/portfolio/profile/uhtayanithiprofile.html
+++ b/pages/portfolio/profile/uhtayanithiprofile.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>profile</title>
     <link rel="stylesheet" href="../../../assets/css/main.css">
-    <link rel="icon" type="image/jpg" sizes="60x32" href="../../../assets/images/p logo.jpg">
+    <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/p logo.jpg">
 </head>
 
 <body>
@@ -35,9 +35,9 @@
                 <p><a href="">தொடர்பு</a></p>
                 <p>|</p>
                 <p><a href="">பின்னூட்டம்</a></p>
-                <p><a href="profile-english.html">English</a></p>
+                <p><a href="uhtayanithiprofile.html">English</a></p>
                 <p>|</p>
-                <p><a href="profile.html">தமிழ்</a></p>
+                <p><a href="uhtayanithiprofile.html">தமிழ்</a></p>
             </div>
 
         </div>
@@ -107,19 +107,19 @@
         <!-- cm image put on header -->
 
         <div class="cm-image">
-            <img src="../../../assets/images/mk stalin.png" alt="error image">
+            <img src="../../../assets/images/udhayanithi.jpg" alt="error image">
         </div>
 
 
         <div class="cm-name">
 
 
-            <p><strong> பதவி:</strong>முதலமைச்சர்</p>
-            <p><strong>பெயர்:</strong>மு. க. ஸ்டாலின்</p>
-            <p><strong>NAME:</strong>M. K. Stalin</p>
+            <p><strong> பதவி:</strong>விளையாட்டு மேம்பாட்டுத்துறை</p>
+            <p><strong>பெயர்:</strong>உதயநிதி ஸ்டாலின்</p>
+            <p><strong>NAME:</strong>Udhayanidhi Stalin</p>
             <p><strong>PARTY:</strong>திராவிட முன்னேற்றக் கழகம்</p>
-            <p><strong>அரசியல்:</strong>38 வருடம்</p>
-             <p><strong>தொழில்</strong>சமூகசேவை, அரசியல்</p>
+            <p><strong>அரசியல்:</strong>2 வருடம்</p>
+             <p><strong>தொழில்</strong>தயாரிப்பாளராக, அரசியல்</p>
 
         </div>
 
