--- a/pages/your opinion/join now.html
+++ b/pages/your opinion/join now.html
@@ -53,7 +53,7 @@
           <ul>
 
             <li><a href="../../index.html">Home</a></li>
-            <li><a href="../../pages/portfolio/potfolio.html">Portfolio</a></li>
+            <li><a href="../portfolio/parties-profile.html">Portfolio</a></li>
             <li>
               <div class="dropdown">
                 <ul>
