--- a/pages/manifesto/bending-english.html
+++ b/pages/manifesto/bending-english.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>manifesto</title>
     <link rel="stylesheet" href="../../assets/css/english-version.css">
+    <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/p logo.jpg">
 </head>
 
 <body>
