--- a/pages/more/daitails of mla/details of mla -english.html
+++ b/pages/more/daitails of mla/details of mla -english.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ditail</title>
     <link rel="stylesheet" href="../../../assets/css/english-version.css">
+    <link rel="icon" type="image/jpg" sizes="60x32" href="../../../assets/images/p logo.jpg">
 </head>
 
 <body>
