--- a/pages/portfolio/parties-profile.html
+++ b/pages/portfolio/parties-profile.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>politic-partys</title>
     <link rel="stylesheet" href="../../assets/css/main.css">
+    <link rel="icon" type="image/jpg" sizes="60x32" href="../../assets/images/p logo.jpg">
 
 </head>
 
@@ -36,9 +37,9 @@
                 <p><a href="">தொடர்பு</a></p>
                 <p>|</p>
                 <p><a href="">பின்னூட்டம்</a></p>
-                <p><a href="profile-english.html">English</a></p>
+                <p><a href="parties-profile.html">English</a></p>
                 <p>|</p>
-                <p><a href="profile.html">தமிழ்</a></p>
+                <p><a href="parties-profile.html">தமிழ்</a></p>
             </div>
 
         </div>
@@ -58,8 +59,8 @@
 
                     <ul>
 
-                        <li><a href="../../../index.html">முகப்பு</a></li>
-                        <li><a href="../potfolio.html">விவரம்</a></li>
+                        <li><a href="../../index.html">முகப்பு</a></li>
+                        <li><a href="parties-profile.html">விவரம்</a></li>
 
                         <li>
                             <div class="dropdown">
@@ -67,13 +68,13 @@
                                     <li><a class="dropbtn" href="#">அறிக்கைகள்</a></li>
                                 </ul>
                                 <div class="dropdown-content">
-                                    <a href="../../manifesto/bending.html">நிலுவை</a>
-                                    <a href="../../manifesto/complte.html">நிறைவு</a>
+                                    <a href="../manifesto/bending.html">நிலுவை</a>
+                                    <a href="../manifesto/complte.html">நிறைவு</a>
                                 </div>
                             </div>
                         </li>
 
-                        <li><a href="../../passt leaders/past leaders.html">தலைவர்கள்</a></li>
+                        <li><a href="../passt leaders/past leaders.html">தலைவர்கள்</a></li>
 
                         <li>
 
@@ -82,8 +83,8 @@
                                     <li><a class="dropbtn" href="">மேலும்</a></li>
                                 </ul>
                                 <div class="dropdown-content">
-                                    <a href="../../more/Governer list.html">ஆளுநர்கள்</a>
-                                    <a href="../../more/mla.html">பிரதிநிதிகள்</a>
+                                    <a href="../more/Governer list.html">ஆளுநர்கள்</a>
+                                    <a href="../more/mla.html">பிரதிநிதிகள்</a>
                                 </div>
 
                         </li>
@@ -122,7 +123,7 @@
                     <img src="../../assets/images/dmk-logo.png" alt="error image">
 
 
-                    <button><a href="">சுயவிவரங்கள்</a></button>
+                    <button><a href="../portfolio/potfolio.html">சுயவிவரங்கள்</a></button>
 
                 </div>
 
