pie only changing

--- a/pages/manifesto/bending.html
+++ b/pages/manifesto/bending.html
@@ -109,7 +109,7 @@
 
 
     <div class="manisurvey">
-        <img src="../../assets/images/_நிலுவை.svg" width="768px" height="500px" alt="error image">
+       <img src="../../assets/images/நிலுவை.png" width="900px" height="600px" alt="">
     </div>
 
 
