--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <div class="section2">
 
-        <h1>welcome to politifact</h1>
+        <h1>அரசியலுக்கு வரவேற்கிறோம்</h1>
 
         <img src="assets/images/Capture.PNG" alt="">
 
@@ -209,26 +209,26 @@
 
     <div class="section5">
 
-        <h2 class="head">latest politics news</h2>
+        <h2 class="head">சமீபத்திய அரசியல் செய்திகள்</h2>
 
         <div class="news">
 
             <div class="news1">
                 <img src="assets/images/news3.jpg" alt="error image">
-                <h2>politics</h2>
+                <h2>அரசியல்</h2>
                 <p>
                     சினிமாவில் காவி நிறம் அணியக் கூடாது என்றால், கறுப்பு ஆடைகள் அணிந்து வில்லனாக நடிப்பதால் திராவிடர் கழகத்தினர் எல்லாம் வில்லன்களா? என மதிமுக தலைமை நிலைய செயலாளர் துரை வைகோ கேள்வி எழுப்பியுள்ளார். வாரிசு அரசியல் பற்றிப் பேச பாஜக மாநிலத் தலைவர் அண்ணாமலைக்கு தகுதியே இல்லை, அவரது கட்சியிலேயே பலரது வாரிசுகள் பொறுப்புகளில் இருக்கிறார்கள் என துரை வைகோ தெரிவித்துள்ளார்.</p>
             </div>
 
             <div class="news1">
                 <img src="assets/images/news2.jpg" alt="error image">
-                <h2>politics</h2>
+                <h2>அரசியல்</h2>
                 <p>தமிழ்நாடு அமைச்சரவையில் பெரும் எதிர்பார்ப்பிற்கு இடையில் பல்வேறு மாற்றங்கள் செய்யப்பட்டு உள்ளன. முதல்வர் ஸ்டாலினின் ஒரு இலாக்காவையும் சேர்த்து மொத்தமாக 11 அமைச்சர்களின் இலாக்காக்கள் மாற்றப்பட்டு உள்ளன. உதயநிதி ஸ்டாலினுக்கு இளைஞர் நலன், விளையாட்டுத்துறை வழங்கப்பட்டு உள்ளது. அதேபோல் சிறப்பு திட்ட செயலாக்கம் துறை வழங்கப்பட்டு உள்ளது.</p>
             </div>
 
             <div class="news1">
                 <img src="assets/images/news1.jpg" alt="error image">
-                <h2>politics</h2>
+                <h2>அரசியல்</h2>
                 <p>சென்னை: கட்சித் தலைமை ஒரு குடும்பத்திடம் மட்டும் தொடர்வதுதான் வாரிசு அரசியல், பாஜகவில் இருப்பது வாரிசு அரசியல் அல்ல.. முதல்வர் ஸ்டாலின் பட்டியலினத்தை சேர்ந்தவரை துணை முதலமைச்சராக்க வேண்டும். என்று பாஜக எம்எல்ஏ வானதி சீனிவாசன் தெரிவித்துள்ளார்.</p>
             </div>
 
@@ -241,7 +241,7 @@
 
         <div class="foot">
 
-            <h1>politic</h1>
+            <h1>அரசியல்</h1>
             <p>
 
 
