--- a/pages/more/mla.html
+++ b/pages/more/mla.html
@@ -144,7 +144,7 @@
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td><a href="daitails of mla/details of mla -english.html" target="_blank" title="கும்மிடிப்பூண்டி">கும்மிடிப்பூண்டி</a></td>
+                    <td><a href="" target="_blank" title="கும்மிடிப்பூண்டி">கும்மிடிப்பூண்டி</a></td>
                     <td>டி ஜெ கோவிந்தராசன்</td>
                     <td>
                         <div class="name-img">
