--- a/pages/portfolio/potfolio.html
+++ b/pages/portfolio/potfolio.html
@@ -381,7 +381,7 @@
 
 
   <!-- footer  section-->
-  <div class="footer d-flex justify-content-around">
+  <div class="footer">
 
     <div class="foot foot2">
 
